@@ -1,5 +1,8 @@
 2008-06-30  Sam Steingold  <sds@gnu.org>
 
+	* modules/clx/new-clx/clx.f (make_xid_obj_2): when the cached
+	object is of the wrong type, signal a continuable error and offer
+	to invalidate either the cache entry or the whole cache
 	* lispbibl.d (correctable_error): export to clisp.h
 
 2008-06-30  Sam Steingold  <sds@gnu.org>
